adjust container width

--- a/style.css
+++ b/style.css
@@ -32,8 +32,9 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
   /*Para centralizar colocar margin auto*/
+  max-width:588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
