--- a/style.css
+++ b/style.css
@@ -76,10 +76,14 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+  animation: slide-back 0.2s;
 }
 .light #switch button {
-  right: 0;
-  left: initial;
+ animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -166,6 +170,29 @@ footer {
   }
 
   .light {
-    --bg-url: url(./asssets/bg-desktop-light.jpg);
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+
+/*animation*/
+/* essa parte do codigo suavisa  a movimentação do 
+modo light para o dark*/
+
+@keyframes slide-in {
+    from{
+      left: 0;
+    }
+    to {
+      left: 50%;
+    }
+}
+
+@keyframes slide-back {
+  from{
+    left: 50%;
+  }
+  to{
+    left: 0;
   }
 }
